# ANACIN-X

./: README.md
anacin-x/event_graph_analysis/: extract_slices.py  graph_kernel_preprocessing.py  utilities.py
anacin-x/event_graph_analysis/config/graph_kernels/: event_graph_attributes.json
anacin-x/event_graph_analysis/visualization/: utilities.py  visualize_event_graph.py
apps/collective_comm_demo/: CMakeLists.txt  README.md
apps/collective_comm_demo/src/: collective_comm_demo.c
